add room logic
