# app/controllers.go
@@ -1,4 +1,4 @@
-// Code generated by goagen v1.2.0, DO NOT EDIT.
+// Code generated by goagen v1.3.0, DO NOT EDIT.
 //
 // API "GAE Chat API": Application Controllers
 //
@@ -44,8 +44,8 @@ type MessageController interface {
 func MountMessageController(service *goa.Service, ctrl MessageController) {
 	initService(service)
 	var h goa.Handler
-	service.Mux.Handle("OPTIONS", "/api/rooms/:roomID/messages", ctrl.MuxHandler("preflight", handleMessageOrigin(cors.HandlePreflight()), nil))
-	service.Mux.Handle("OPTIONS", "/api/rooms/:roomID/messages/:messageID", ctrl.MuxHandler("preflight", handleMessageOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/api/rooms/:name/messages", ctrl.MuxHandler("preflight", handleMessageOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/api/rooms/:name/messages/:messageID", ctrl.MuxHandler("preflight", handleMessageOrigin(cors.HandlePreflight()), nil))
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -60,8 +60,8 @@ func MountMessageController(service *goa.Service, ctrl MessageController) {
 		return ctrl.List(rctx)
 	}
 	h = handleMessageOrigin(h)
-	service.Mux.Handle("GET", "/api/rooms/:roomID/messages", ctrl.MuxHandler("List", h, nil))
-	service.LogInfo("mount", "ctrl", "Message", "action", "List", "route", "GET /api/rooms/:roomID/messages")
+	service.Mux.Handle("GET", "/api/rooms/:name/messages", ctrl.MuxHandler("list", h, nil))
+	service.LogInfo("mount", "ctrl", "Message", "action", "List", "route", "GET /api/rooms/:name/messages")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -83,8 +83,8 @@ func MountMessageController(service *goa.Service, ctrl MessageController) {
 	}
 	h = handleSecurity("jwt", h, "api:access")
 	h = handleMessageOrigin(h)
-	service.Mux.Handle("POST", "/api/rooms/:roomID/messages", ctrl.MuxHandler("Post", h, unmarshalPostMessagePayload))
-	service.LogInfo("mount", "ctrl", "Message", "action", "Post", "route", "POST /api/rooms/:roomID/messages", "security", "jwt")
+	service.Mux.Handle("POST", "/api/rooms/:name/messages", ctrl.MuxHandler("post", h, unmarshalPostMessagePayload))
+	service.LogInfo("mount", "ctrl", "Message", "action", "Post", "route", "POST /api/rooms/:name/messages", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -99,8 +99,8 @@ func MountMessageController(service *goa.Service, ctrl MessageController) {
 		return ctrl.Show(rctx)
 	}
 	h = handleMessageOrigin(h)
-	service.Mux.Handle("GET", "/api/rooms/:roomID/messages/:messageID", ctrl.MuxHandler("Show", h, nil))
-	service.LogInfo("mount", "ctrl", "Message", "action", "Show", "route", "GET /api/rooms/:roomID/messages/:messageID")
+	service.Mux.Handle("GET", "/api/rooms/:name/messages/:messageID", ctrl.MuxHandler("show", h, nil))
+	service.LogInfo("mount", "ctrl", "Message", "action", "Show", "route", "GET /api/rooms/:name/messages/:messageID")
 }
 
 // handleMessageOrigin applies the CORS response headers corresponding to the origin.
@@ -158,7 +158,7 @@ func MountRoomController(service *goa.Service, ctrl RoomController) {
 	initService(service)
 	var h goa.Handler
 	service.Mux.Handle("OPTIONS", "/api/rooms", ctrl.MuxHandler("preflight", handleRoomOrigin(cors.HandlePreflight()), nil))
-	service.Mux.Handle("OPTIONS", "/api/rooms/:roomID", ctrl.MuxHandler("preflight", handleRoomOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/api/rooms/:name", ctrl.MuxHandler("preflight", handleRoomOrigin(cors.HandlePreflight()), nil))
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -173,7 +173,7 @@ func MountRoomController(service *goa.Service, ctrl RoomController) {
 		return ctrl.List(rctx)
 	}
 	h = handleRoomOrigin(h)
-	service.Mux.Handle("GET", "/api/rooms", ctrl.MuxHandler("List", h, nil))
+	service.Mux.Handle("GET", "/api/rooms", ctrl.MuxHandler("list", h, nil))
 	service.LogInfo("mount", "ctrl", "Room", "action", "List", "route", "GET /api/rooms")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
@@ -196,7 +196,7 @@ func MountRoomController(service *goa.Service, ctrl RoomController) {
 	}
 	h = handleSecurity("jwt", h, "api:access")
 	h = handleRoomOrigin(h)
-	service.Mux.Handle("POST", "/api/rooms", ctrl.MuxHandler("Post", h, unmarshalPostRoomPayload))
+	service.Mux.Handle("POST", "/api/rooms", ctrl.MuxHandler("post", h, unmarshalPostRoomPayload))
 	service.LogInfo("mount", "ctrl", "Room", "action", "Post", "route", "POST /api/rooms", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
@@ -212,8 +212,8 @@ func MountRoomController(service *goa.Service, ctrl RoomController) {
 		return ctrl.Show(rctx)
 	}
 	h = handleRoomOrigin(h)
-	service.Mux.Handle("GET", "/api/rooms/:roomID", ctrl.MuxHandler("Show", h, nil))
-	service.LogInfo("mount", "ctrl", "Room", "action", "Show", "route", "GET /api/rooms/:roomID")
+	service.Mux.Handle("GET", "/api/rooms/:name", ctrl.MuxHandler("show", h, nil))
+	service.LogInfo("mount", "ctrl", "Room", "action", "Show", "route", "GET /api/rooms/:name")
 }
 
 // handleRoomOrigin applies the CORS response headers corresponding to the origin.
